log/build_2022-06-24_12-13-29/game_engine/stderr.log
  File "c:\Users\marti\Documents\GitHub\GameEngine\install\game_engine\Lib\site-packages\game_engine\Engine\Players\ai.py", line 1
    from ../boards import *
           ^
SyntaxError: invalid syntax

